# Small-Tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  pdf_compressor.py  tailwind.config.ts
.github/workflows/: build-windows.yml
docs/: WINDOWS_BUILD.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CompressionSettings.tsx  ErrorAlert.tsx  FileDropzone.tsx  ResultCard.tsx
src/components/ui/: alert.tsx  button.tsx  card.tsx  select.tsx
