[package]
name = "pdf-shrinker"
version = "0.1.0"
description = "A desktop PDF compression app powered by bundled Ghostscript"
authors = ["PDF Shrinker"]
edition = "2021"

[lib]
name = "pdf_shrinker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-shell = "2.2.1"
